Wrap and delete parent fixed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -103,27 +103,34 @@ h1 {
 .task {
   color: rgb(36, 20, 131);
   font-size: 1.5em;
-  margin: 20px;
+  margin: 15px auto;
   background: url("https://img.icons8.com/plasticine/100/000000/task.png") left
     center;
   background-repeat: no-repeat;
   background-size: 30px;
-  padding: 5px 5px 5px 35px;
+  padding: 5px 40px 5px 35px;
   list-style: none;
   position: relative;
+  width: 80%;
+  height: auto;
   box-shadow: -1px 1px 4px 0px #000000;
+  background-color: cadetblue;
+  word-wrap: break-word;
+  display: block;
 }
 
 .task a {
-  width: 40px;
+  width: 30px;
   border-radius: 50%;
   height: 30px;
   position: absolute;
   right: 2px;
   background: url("https://img.icons8.com/flat_round/64/000000/delete-sign.png")
     no-repeat center center;
-  background-size: 80%;
+  background-size: 100%;
   cursor: pointer;
+  margin-right: 5px;
+  box-shadow: 1px 0px 6px 0px #000000;
 }
 
 .task::first-letter {
